@@ -1,0 +1,7 @@
+<html><body>
+Usually externalized CDockables can be stacked, but there is no way to split them on the same window.
+
+Venturing deep into the inner workings of the framework it is possible to change that.
+
+A word of warning: not all features will react kindly to this level of intrussion... 
+</body></html>
